test_suite/tests/ui/type-attribute/into.stderr
error: failed to parse type: into = "Option<T"
 --> $DIR/into.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

